# bad-reachy

./: .gitignore  README.md  expressive_movements.py  pyproject.toml  reachy_body_server.py  run_app.py
bad_reachy/: __init__.py  comedy.py  config.py  dashboard.py  emotions.py  llm.py  llm_fast.py  main.py  stt.py  stt_fast.py  tools.py  tts.py  tts_fast.py  tts_manager.py
bad_reachy/audio/: __init__.py  head_wobbler.py  speech_tapper.py
grumpy_reachy/: __init__.py  comedy.py  config.py  dashboard.py  emotions.py  llm.py  main.py  stt.py  tools.py  tts.py
