[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bad-reachy"
version = "1.0.0"
description = "A sarcastic, sweary robot assistant with attitude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "faster-whisper>=0.9.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."reachy_mini_apps"]
bad-reachy = "bad_reachy:GrumpyReachyApp"
