[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bad-reachy"
version = "1.0.0"
description = "A sarcastic, sweary robot assistant with attitude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "faster-whisper>=0.9.0",
    "opencv-python>=4.8.0",
    "python-multipart>=0.0.6",
    "sounddevice>=0.4.0",
    "scipy>=1.10.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."reachy_mini_apps"]
bad-reachy = "bad_reachy:GrumpyReachyApp"
